fix tooltip overflow issue

--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -50,7 +50,7 @@ $prefix: #{$globalPrefix}__modal;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 600;
-  font-size: 1.25em;
+  font-size: 1.5em;
   line-height: 1.25;
   color: #065fd4;
   box-sizing: border-box;
